[gd_scene load_steps=9 format=3 uid="uid://4cf8b11uaaaj"]

[ext_resource type="Script" path="res://Script/Entity/Slash/Portal.gd" id="1_jflyh"]
[ext_resource type="Texture2D" uid="uid://bnff18pd5j50d" path="res://Asset/Weapon/Slash/Charge_C3.png" id="2_qg77r"]
[ext_resource type="Texture2D" uid="uid://k107bgxj3qrq" path="res://Asset/Weapon/Slash/Charge_C3.1.png" id="3_2rfmk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jl55j"]
size = Vector2(60, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cywht"]
size = Vector2(140, 20)

[sub_resource type="Gradient" id="Gradient_2papb"]
offsets = PackedFloat32Array()
colors = PackedColorArray()

[sub_resource type="Animation" id="Animation_t6h3t"]
resource_name = "Deploy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pillar:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cross:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-220, -60), Vector2(-26, -60), Vector2(-26, -60)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cross:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cross2:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-195, -136), Vector2(-72, -136), Vector2(-72, -136)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cross2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Cross2/Cross3:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hpavx"]
_data = {
"Deploy": SubResource("Animation_t6h3t")
}

[node name="Portal" type="Area2D"]
collision_layer = 0
collision_mask = 6
priority = 100
script = ExtResource("1_jflyh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jl55j")

[node name="Wall" type="ShapeCast2D" parent="."]
shape = SubResource("RectangleShape2D_cywht")
target_position = Vector2(0, 0)
collision_mask = 16

[node name="OutWall" type="ShapeCast2D" parent="."]
shape = SubResource("RectangleShape2D_cywht")
target_position = Vector2(0, 0)
collision_mask = 16

[node name="Effect1" type="CPUParticles2D" parent="."]
position = Vector2(0, 26)
amount = 500
speed_scale = 2.0
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(25, 160)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_max = 100.0
scale_amount_max = 20.0
color = Color(0, 0, 0, 1)

[node name="Effect2" type="CPUParticles2D" parent="."]
amount = 200
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(25, 160)
direction = Vector2(-1, 0)
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
orbit_velocity_min = -0.5
orbit_velocity_max = 0.5
scale_amount_max = 20.0
color = Color(0, 0, 0, 1)
color_ramp = SubResource("Gradient_2papb")

[node name="Effect3" type="CPUParticles2D" parent="."]
position = Vector2(-46, -59)
amount = 200
lifetime_randomness = 0.5
local_coords = true
emission_shape = 1
emission_sphere_radius = 25.0
direction = Vector2(-1, 0)
scale_amount_max = 20.0
color = Color(0, 0, 0, 1)
color_ramp = SubResource("Gradient_2papb")

[node name="Pillar" type="Sprite2D" parent="."]
position = Vector2(-45, 190)
texture = ExtResource("2_qg77r")
offset = Vector2(0, -190)

[node name="Cross" type="Sprite2D" parent="."]
position = Vector2(-26, -60)
rotation = -1.5708
texture = ExtResource("2_qg77r")
vframes = 2

[node name="Cross2" type="Sprite2D" parent="."]
position = Vector2(-72, -136)
rotation = -1.5708
texture = ExtResource("2_qg77r")
vframes = 2

[node name="Cross3" type="Sprite2D" parent="Cross2"]
position = Vector2(-3, -36)
texture = ExtResource("3_2rfmk")
offset = Vector2(19, 0)
vframes = 2

[node name="Cross4" type="Sprite2D" parent="Cross2/Cross3"]
position = Vector2(19, 95)
scale = Vector2(1, 0.65)
texture = ExtResource("3_2rfmk")
offset = Vector2(0, 63)
vframes = 3
frame = 1

[node name="Cross4" type="Sprite2D" parent="Cross2"]
position = Vector2(0, 95)
scale = Vector2(1, 0.36)
texture = ExtResource("3_2rfmk")
offset = Vector2(0, 63)
vframes = 3
frame = 1

[node name="Ani" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hpavx")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="out"]
